Time: 30 ms (5.72%), Space: 98.4 MB (5.64%) - LeetHub